--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           results_file: results.json
           results_format: json # keep as JSON
-          publish_results: true # still publishes to Security tab
+          publish_results: false # still publishes to Security tab
 
       - name: Save Scorecard results as artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
