--- a/.github/workflows/ci-insecure-owasp.yml
+++ b/.github/workflows/ci-insecure-owasp.yml
@@ -5,8 +5,6 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-  pull_request_target:
-    branches: ["main"]
   workflow_dispatch: {}
 
 permissions:
@@ -66,7 +64,7 @@ jobs:
       - name: Create artifact
         run: |
           mkdir -p out
-          cp -r public/* out/ || true
+          cp -r public/* out/
           tar czf artifact.tar.gz -C out .
 
       - name: Upload artifact
